--- a/app/globals.css
+++ b/app/globals.css
@@ -5,8 +5,6 @@
 
 @layer base {
   body {
-    font-family: var(--font-jetbrainsMono), monospace;
-    background-color: #0f172a; /* Dark background color */
-    color: #e0e7ff; /* Light text color */
+    @apply font-primary bg-primary text-white leading-loose;
   }
 }
